# templates

./: Justfile
python/: .gitignore  Justfile  pyproject.toml
python/src/hello/: __init__.py
python/test/: test_hello.py
ruby/: .rubocop.yml  Dockerfile  Gemfile  Justfile
ruby/lib/: hello.rb
ruby/sig/: hello.rbs
ruby/test/: hello_test.rb  test_helper.rb
