[project]
name = "hello"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Tom Barone", email = "mail@tombarone.net" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello = "hello:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "pdoc3>=0.11.6",
  "pyright>=1.1.403",
  "pytest>=8.4.1",
  "ruff>=0.12.7",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",   # https://docs.astral.sh/ruff/rules/incorrect-blank-line-before-class/
  "D212",   # https://docs.astral.sh/ruff/rules/multi-line-summary-first-line/
  "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/#formatter-compatibility
]

[tool.ruff.lint.extend-per-file-ignores]
"test/**/test_*.py" = [
  "S101",   # https://docs.astral.sh/ruff/rules/assert
  "D100",   # https://docs.astral.sh/ruff/rules/undocumented-public-module/
  "D103",   # https://docs.astral.sh/ruff/rules/undocumented-public-function/
  "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/
]
